# CardiacModelGenerator

./: LICENSE  README.md  pyproject.toml
ExampleData/patient27/: IMG00001.dcm  IMG00002.dcm  IMG00003.dcm  IMG00004.dcm  IMG00005.dcm  IMG00006.dcm  IMG00007.dcm  IMG00008.dcm  IMG00009.dcm  IMG00010.dcm  IMG00011.dcm  IMG00012.dcm  IMG00013.dcm  IMG00014.dcm  IMG00015.dcm  IMG00016.dcm  IMG00017.dcm  IMG00018.dcm  IMG00019.dcm  IMG00020.dcm  IMG00021.dcm  IMG00022.dcm  IMG00023.dcm  IMG00024.dcm  IMG00025.dcm  IMG00026.dcm  IMG00027.dcm  IMG00028.dcm  IMG00029.dcm  IMG00030.dcm  IMG00031.dcm  IMG00032.dcm  IMG00033.dcm  IMG00034.dcm  IMG00035.dcm  IMG00036.dcm  IMG00037.dcm  IMG00038.dcm  IMG00039.dcm  IMG00040.dcm  (+43 more)
src/CardiacModelGenerator/: CardiacModelGenerator.py  _init_.py
src/CardiacModelGenerator_vjaniuw/: CardiacModelGenerator.py  GUI_Model_Project_V2.py  Test_model_project.py
tests/: CardiacModelGenerator.py  Test_Unittest.py
