[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "CardiacModelGenerator"
version = "0.1.0"
dependencies = [
  "numpy",
  "scipy",
  "matplotlib",
  "vtk",
  "pandas",
  "h5py",
  "nibabel",
  "pillow",
  "scikit-image",
  "scikit-learn",
]
requires-python = ">=3.8"
authors = [
  {name = "Vinay Jani", email = "vjani@uw.edu"}
]
authors = [
  {name = "Vinay Jani", email = "vjani@uw.edu"}
]
description = "Generate 3D model from clinical cardiac imaging data "
readme = "README.md"
license = {file = "LICENSE.txt"}
keywords = ["cardiac", "modeling", "medical imaging", "VTK", "3D"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Topic :: Scientific/Engineering :: Medical Science Apps."
]

[project.optional-dependencies]
dev = ["pytest", "black", "flake8"]
gui = ["PyQt5"]


[project.urls]
Homepage = "https://github.com/vjaniuw/CardiacModelGenerator"
Documentation = "https://github.com/vjaniuw/CardiacModelGenerator/wiki"
Repository = "https://github.com/vjaniuw/CardiacModelGenerator"
"Bug Tracker" = "https://github.com/vjaniuw/CardiacModelGenerator/issues"

[project.scripts]
generate-cardiac-model = "cardiac_model_generator:main"

[project.entry-points."console_scripts"]
cardiac-cli = "cardiac_model_generator.cli:main"