[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "CardiacModelGenerator"
version = "0.1.9"
dependencies = [
  "wxpython>=4.2.2",  
  "numpy>=1.21.0,<2.0.0",  
  "matplotlib>=3.4.0,<4.0.0", 
  "pydicom>=2.2.0,<3.0.0",  
  "nibabel>=3.0.0,<6.0.0",  
  "opencv-python>=4.5.0,<5.0.0", 
  "pyvista>=0.32.0,<0.50.0" 
]

requires-python = ">=3.9"
authors = [
  {name = "Vinay Jani", email = "vjani@uw.edu"}
]

description = "Generate 3D model from clinical cardiac imaging data "
readme = "README.md"
license = {file = "LICENSE"}
keywords = ["cardiac", "modeling", "medical imaging", "VTK", "3D"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Topic :: Scientific/Engineering :: Medical Science Apps."
]

[project.optional-dependencies]
dev = ["black", "flake8"]


[tool.hatch.build.targets.wheel]
packages = ["src/CardiacModelGenerator"]

[project.urls]
Homepage = "https://github.com/vjaniuw/CardiacModelGenerator"
Documentation = "https://github.com/vjaniuw/CardiacModelGenerator/wiki"
Repository = "https://github.com/vjaniuw/CardiacModelGenerator"
"Bug Tracker" = "https://github.com/vjaniuw/CardiacModelGenerator/issues"

[project.scripts]
generate-cardiac-model = "cardiac_model_generator:main"

